# SmokeDetector

./: .codeclimate.yml  .gitattributes  .gitignore  .gitmodules  .pullapprove.yml  .travis.yml  CODEOWNERS  CONTRIBUTING.md  CONTRIBUTING_PULLREQS.md  Dockerfile  IM_IN_UR_FILEZ  InspectionReference.md  LICENSE-APACHE  LICENSE-MIT  README.ko.md  README.md  REFDOC.md  RevertedMode.md  SECURITY.md  StandbyMode.md  _Git_Windows.py  apigetpost.py  bad_keywords.txt  bad_keywords_txt2csv.py  bayesianfuncs.py  blacklisted_cidrs.yml  blacklisted_nses.yml  blacklisted_numbers.txt  blacklisted_usernames.txt  blacklisted_websites.txt  blacklists.py  bodyfetcher.py  chat_logon.py  chatcommands.py  chatcommunicate.py  chatexchange_extension.py  check_for_existing_spammers.sh  circle.yml  cloud-init  config  (+71 more)
.circleci/: config.yml
.github/: CODE_OF_CONDUCT.md  stale.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml
Helpers/: __init__.py  checks.py  rules.py
ISSUE_TEMPLATE/: change_request.md
bayesian/: .bayes.py.swp  .classify.py.swp  ElectronicsGood.txt  GamingGood.txt  GermanGood.txt  ItalianGood.txt  MathematicsGood.txt  README.md  SOLowQuality.txt  Spammy Titles - QueryResults.csv  SpanishGood.txt  StatsGood.txt  bad-0755-15-10-2014.txt  bad-1555-09-10-2014.txt  bad.txt  bayes.db  bayes.py  classify.py  db.py  learn.py  mode.py  reset.py  status.py  testharness.py  words.py
bayesian/__MACOSX/: ._GamingGood.txt  ._GermanGood.txt  ._ItalianGood.txt  ._MathematicsGood.txt  ._SOLowQuality.txt  ._SpanishGood.txt  ._StatsGood.txt
blacklists/: bad_keywords.txt
classes/: Git.py  Post.py  _Git.py  _Git_Windows.py  _Post.py  __init__.py  dns.py  dnsresolver.py  feedback.py  post.py
hooks/: pre-commit
models/: __init__.py  base.py  metasmoke_api.py  se_api.py  yaml_files.py
particulate_client/: index.html  script.js
srccheck/: checkall.py  checkfunctionnames.py  checkindentation.py  srccheckbase.py
test/: conftest.py  data_test_parsing.txt  data_test_spamhandling.txt  fake.py  old_chat_tests.py  spinup_git.sh  srccheckbase.py  test_blacklist_integrity.py  test_blacklists.py  test_chatcommands.py  test_chatcommunicate.py  test_datahandling.py  test_findspam.py  test_gibberish.py  test_globalvars.py  test_helpers.py  test_letter_homoglyphs.py  test_parsing.py  test_phone_numbers.py  test_regexes.py  test_rooms.yml  test_socketscience.py  test_spamhanding.py  test_spamhandling.py  test_srccheck.py
word_embeddings_for_chatbot/: word2vec.py
